@@ -29,6 +29,7 @@
     <File name="MonoDevelop.Moonlight/MoonlightParser.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.Moonlight/MoonlightEditorExtension.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.Moonlight/XamlG.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.Moonlight/MoonlightParsedDocument.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="Mono.Posix, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
@@ -46,6 +47,7 @@
     <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Project" localcopy="False" refto="MonoDevelop.DesignerSupport" />
     <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.XmlEditor" />
+    <ProjectReference type="Gac" localcopy="True" refto="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </References>
   <GtkDesignInfo />
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="Makefile.am" BuildTargetName="" CleanTargetName="" SyncReferences="True" IsAutotoolsProject="True" RelativeConfigureInPath="../../..">
